save incase of loss at setup stage

--- a/Client/login.html
+++ b/Client/login.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8">
     <title>Login / Sign Up Form</title>
     <link rel="shortcut icon" href="/assets/favicon.ico">
-    <link rel="stylesheet" href="./src/main.css">
-
+    <link rel="stylesheet" href="../src/login.css">
 </head>
 <body>
   <div class="page">
@@ -15,7 +14,7 @@
         <nav class="nav">
           <ul class="header__list">
             <li class="header__item"><a href="../index.html" class="nav__link">Home</a></li>
-            <li class="header__item"><a href="../Sign-In/login.html" class="nav__link">Code Pad</a></li>
+            <li class="header__item"><a href="../Sign-In/login.html" class="nav__link">Music Trivia</a></li>
             <!-- box next to Images -->
             <li class="header__item header__item--app">
               <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><rect x="37" width="26" height="26"></rect><rect width="26" height="26"></rect><rect x="74" width="26" height="26"></rect><rect x="37" y="37" width="26" height="26"></rect><rect y="37" width="26" height="26"></rect><rect x="74" y="37" width="26" height="26"></rect><rect x="37" y="74" width="26" height="26"></rect><rect y="74" width="26" height="26"></rect><rect x="74" y="74" width="26" height="26"></rect></svg>
@@ -71,6 +70,6 @@
     </div>
   </div>
   </div>
-    <script src="./src/main.js"></script>
+    <script src="./src/login.js"></script>
 </body>
 </html>
