first night login page

--- a/Client/src/login.html
+++ b/Client/src/login.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Login / Sign Up Form</title>
     <link rel="shortcut icon" href="/assets/favicon.ico">
-    <link rel="stylesheet" href="../src/login.css">
+    <link rel="stylesheet" href="/login.css" type="text/css">
 </head>
 <body>
   <div class="page">
